--- a/config/config.yaml
+++ b/config/config.yaml
@@ -224,7 +224,10 @@ display:
 # ===============================================================
 notification:
   enabled: true                       # 是否启用通知功能
-
+  channels:
+    feishu:
+      enabled: true
+      webhook_url: ""  # 必须留空！从 GitHub Secret 读
   # 🕐 推送时间窗口控制（可选功能）
   # 用途：限制推送的时间范围，避免非工作时间打扰
   # 适用场景：
